# Capstone

./: .gitignore  CLAUDE.md  Edge.py  Node.py  Platoon.py  Protocol Definition.md  README.md  Smart_Decision.py  main.py  main2.py  ns3_adapter.py  pyproject.toml  requirements.txt  run_batch.py  test.py
.claude/: CLAUDE.md
AI/: README.md  Smart_Decision.py  donor_scorer.py  donor_weights.json  donor_weights.py  smart_decision.py
AI/training/: train_donor.py
Core/: Node.py  test.py
Messages-layer4/: messages.py
Network/: Message.py
Protocol/: context.py
Protocol/LayerA_NeighborDiscovery/: __init__.py  handler.py  neighbor_table.py  olsr.py
Protocol/LayerB_ProviderAnnouncement/: __init__.py  handler.py  provider_table.py
Simulation/: cosim_orchestrator.py  ns3_adapter.py  route_provider.py  run_highway_cosim.py
Tests/: sim_integration.py  test_layer1.py  test_messages.py
docs/: Architecture.md  BENCHMARK_COMPARISON.md  METRICS.md  directories.txt  protocol_definition.md
network/: inter_discovery.py  network.py  platoon.py
protocol/: handler.py  info_table.py  message_handler.py  messages.py  provider_table.py
simulation/: README.md  __init__.py  metrics.py  sim_config.py  sim_edge.py  sim_network.py  traci_runner.py  traci_vehicle.py
tests/: __init__.py  conftest.py  test_consumer_handler.py  test_context.py  test_handshake_integration.py  test_layer_d_handler.py  test_neighbor_table.py  test_platoon.py  test_platoon_head_handler.py  test_provider_table.py
vehicle/: edge.py  energy_manager.py  gps.py  platoon.py  vehicle.py
(+43 files in other folders)
