[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mvccp"
version = "0.1.0"
description = "Multi-hop VANET Charging Coordination Protocol"
readme = "docs/Protocol_Definition.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MVCCP Team"}
]
dependencies = []

[project.optional-dependencies]
simulation = [
    "traci>=1.14.0",
    "sumolib>=1.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Add src to path for imports
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
